# games-best-approach

./: README.md  pyproject.toml
src/games_best_approach/: __init__.py
src/games_best_approach/games/qwixx/: game.py
src/games_best_approach/games/qwixx/model/: board.py  dice.py  lane.py
tests/test_games/test_qwuixx/test_model/: test_board.py  test_dice.py  test_lane.py
