[project]
name = "games-best-approach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AaronBraatz", email = "aaron_br@hotmail.de" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
lint = [
    "ruff>=0.11.12",
]
